<resources>
    <string name="app_name" translatable="false">Sample App Kotlin</string>

    <string name="next_product" translatable="false">Next product</string>

    <string name="virtusize_design_system" translatable="false">Virtusize Design System</string>

    <string name="virtusize_button" translatable="false">Button</string>
    <string name="virtusize_tooltip" translatable="false">Tooltip</string>
    <string name="virtusize_avatar" translatable="false">Avatar</string>

    <string name="style_button_title" translatable="false">Default, Inverted, and Disabled Buttons</string>
    <string name="color_button_title" translatable="false">Color</string>
    <string name="size_button_title" translatable="false">Size</string>
    <string name="text_size_button_title" translatable="false">Text Size</string>
    <string name="fluid_and_block_level_button_title" translatable="false">Fluid and Block-Level Buttons</string>
    <string name="font_weight_button_title" translatable="false">Font Weight</string>
    <string name="border_elevation_transparent_button_title" translatable="false">Border, Elevation, transparent</string>
    <string name="square_button_title" translatable="false">Square Button</string>
    <string name="icon_button_title" translatable="false">Leading and Trailing Icons</string>
    <string name="round_button_title" translatable="false">Round Buttons</string>
    <string name="size_avatar_title" translatable="false">Size</string>
    <string name="border_style_title" translatable="false">Border Style, Color, and Width</string>
    <string name="fitting_room_avatar_title" translatable="false">Fitting Room Avatars</string>

    <string name="default_button" translatable="false">Default Button</string>
    <string name="flat_button" translatable="false">Flat Button</string>
    <string name="inverted_button" translatable="false">Inverted Button</string>
    <string name="disabled_button" translatable="false">Disabled Button</string>
    <string name="default_size_button" translatable="false">Default Size Button</string>
    <string name="small_size_button" translatable="false">Small Button</string>
    <string name="smaller_text_size_button" translatable="false">Smaller Button</string>
    <string name="normal_text_size_button" translatable="false">Normal Button</string>
    <string name="large_text_size_button" translatable="false">Large Button</string>
    <string name="larger_text_size_button" translatable="false">Larger Button</string>
    <string name="like" translatable="false">Like</string>
    <string name="get_started" translatable="false">Get Started</string>
    <string name="redirect_fb" translatable="false">Redirect to Facebook</string>
    <string name="cm" translatable="false">cm</string>

    <string name="default_tooltip_title" translatable="false">Default Tooltip Buttons</string>
    <string name="custom_tooltip_button" translatable="false">Custom Tooltip Button</string>
    <string name="fitting_tooltip_button" translatable="false">FittingRoom Tooltip Button</string>
    <string name="show_tooltip" translatable="false">Show Tooltip</string>
    <string name="vs_tooltip1_text" translatable="false">A tooltip appears adjacent to the element. Clicking \"Close\" will dismiss the tooltip.</string>
    <string name="vs_tooltip2_text" translatable="false">You can set an \"inverseStyle\" prop to change the color. or \"position\" prop to change the position relative to the anchor</string>
    <string name="vs_tooltip3_text" translatable="false">You can also set \"hideArrow\" and \"hideCloseButton\" to not show each of these</string>
    <string name="vs_custom_tooltip_text" translatable="false">You can set \"customView\" prop for the custom Tooltip layout and access its views by the method \"getCustomView\"</string>
    <string name="block_level_button" translatable="false">Block-Level Button</string>
    <string name="button_that_is_not_block_nor_fluid" translatable="false">Button that is not Block nor Fluid</string>
    <string name="fluid_button" translatable="false">Fluid Button</string>
    <string name="default_weight_font_is_bold" translatable="false">Default Weight Font is Bold</string>
    <string name="regular_weight_font" translatable="false">Regular Weight Font</string>
    <string name="button_with_no_borders" translatable="false">Button with No Borders</string>
    <string name="button_that_sits_flat_no_shadow_below_it" translatable="false">Button that sits flat, no shadow below it</string>
    <string name="transparent_button" translatable="false">Transparent button</string>
    <string name="transparent_and_no_border" translatable="false">Transparent and no border</string>
</resources>
