<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/mainFragment">

    <fragment
        android:id="@+id/mainFragment"
        android:name="com.virtusize.android.MainFragment"
        android:label="Virtusize Integration"
        tools:layout="@layout/fragment_main">
        <action
            android:id="@+id/action_mainFragment_to_designSystemFragment"
            app:destination="@id/designSystemFragment" />
    </fragment>
    <fragment
        android:id="@+id/designSystemFragment"
        android:name="com.virtusize.android.designsystem.DesignSystemFragment"
        android:label="Virtusize Design System"
        tools:layout="@layout/fragment_design_system">
        <action
            android:id="@+id/action_designSystemFragment_to_buttonFragment"
            app:destination="@id/buttonFragment" />
        <action
            android:id="@+id/action_designSystemFragment_to_tooltipFragment"
            app:destination="@id/tooltipFragment" />
        <action
            android:id="@+id/action_designSystemFragment_to_avatarFragment"
            app:destination="@id/avatarFragment" />
    </fragment>
    <fragment
        android:id="@+id/buttonFragment"
        android:name="com.virtusize.android.designsystem.ButtonFragment"
        android:label="@string/virtusize_button"
        tools:layout="@layout/fragment_button"/>
    <fragment
        android:id="@+id/tooltipFragment"
        android:name="com.virtusize.android.designsystem.TooltipFragment"
        android:label="@string/virtusize_tooltip"
        tools:layout="@layout/fragment_tooltip"/>
    <fragment
        android:id="@+id/productFragment"
        android:name="com.virtusize.android.ProductFragment"
        android:label="Virtusize Product"
        tools:layout="@layout/fragment_product" >
        <action
            android:id="@+id/action_productFragment_to_self"
            app:destination="@id/productFragment" />
    </fragment>
    <fragment
        android:id="@+id/avatarFragment"
        android:name="com.virtusize.sampleappkotlin.designsystem.AvatarFragment"
        android:label="@string/virtusize_avatar"
        tools:layout="@layout/fragment_avatar" />
</navigation>
