<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/defaultTooltipTextView"
        style="@style/TextAppearance.Virtusize.Headline3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="@dimen/virtusize_16dp"
        android:text="@string/default_tooltip_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.virtusize.android.ui.button.VirtusizeButton
        android:id="@+id/tooltip1Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_tooltip"
        app:uiButtonStyle="virtusize_default" />

    <com.virtusize.android.ui.button.VirtusizeButton
        android:id="@+id/tooltip2Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_tooltip"
        app:uiButtonStyle="virtusize_default" />

    <com.virtusize.android.ui.button.VirtusizeButton
        android:id="@+id/tooltip3Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_tooltip"
        app:uiButtonStyle="virtusize_default" />

    <com.virtusize.android.ui.button.VirtusizeButton
        android:id="@+id/tooltip4Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_tooltip"
        app:uiButtonStyle="virtusize_default" />

    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/defaultTooltipButtonFlow"
        style="@style/VirtusizeDesignSystemFlow"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="tooltip1Button,tooltip2Button,tooltip3Button,tooltip4Button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/defaultTooltipTextView" />

    <TextView
        android:id="@+id/customTooltipTextView"
        style="@style/TextAppearance.Virtusize.Headline3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="@dimen/virtusize_16dp"
        android:text="@string/custom_tooltip_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/defaultTooltipButtonFlow" />

    <com.virtusize.android.ui.button.VirtusizeButton
        android:id="@+id/customTooltipButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/virtusize_16dp"
        android:text="@string/show_tooltip"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/customTooltipTextView"
        app:uiButtonStyle="virtusize_default" />

    <TextView
        android:id="@+id/fittingRoomTooltipTextView"
        style="@style/TextAppearance.Virtusize.Headline3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="@dimen/virtusize_16dp"
        android:text="@string/fitting_tooltip_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/customTooltipButton" />

    <com.virtusize.android.ui.button.VirtusizeRoundImageButton
        android:id="@+id/fittingRoomEntryButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/virtusize_16dp"
        android:src="@drawable/ic_search_product"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fittingRoomTooltipTextView" />

</androidx.constraintlayout.widget.ConstraintLayout>